# Handpet

./: CMakeLists.txt  LICENSE  README.md  platformio.ini
src/: linux_main.cpp
src/GameLogic/: AbstractDigimonDataLoader.h  Digimon.cpp  Digimon.h
src/SaveGame/: LinuxSave.cpp  LinuxSave.h
src/VPetLCD/: AbstractSpriteManager.h  LinuxSpriteManager.cpp  LinuxSpriteManager.h  VPetLCD.h
src/VPetLCD/DisplayAdapter/: AbstractDisplayadapter.h  SDL_DisplayAdapter.cpp  SDL_DisplayAdapter.h
src/VPetLCD/ImageData/: DigimonSprites.h  HighResMenuItems.h  LettersAndDigits.h  SymbolData.h
src/VPetLCD/Screens/: ClockScreen.cpp  ClockScreen.h  DigimonWatchingScreen.cpp  DigimonWatchingScreen.h  HealthScreen.cpp  HealthScreen.h  PetSelectScreen.cpp  PetSelectScreen.h  SelectionScreen.h  SettingsScreen.h  TrainingScreen.cpp  TrainingScreen.h
src/compat/: ArduinoCompat.h
